src/tests/snapshots/niri__tests__window_opening__check_fullscreen_maximize@fsT-tmT-wfsBU-wmB.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nwant maximized: B\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized-to-edges true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Activated, Maximized]

unmaximize configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
